# fluxified

./: README.md  pyproject.toml
bootstrap/: git-repository.yml  kustomization.yaml
clusters/roanoke/: kustomization.yaml  kustomize.yaml  kustomize.yml
overlays/applications/vtt-maps/: certificate.yaml  deployment.yaml  flux-kustomization.yaml  gateway.yaml  git-repository.yaml  image-policy.yaml  image-repository.yaml  kustomization.yaml  namespace.yaml  service.yaml  virtual-service.yaml
overlays/istio/: kustomization.yaml
overlays/istio/helm-releases/: base.yaml  gateway.yml  istiod.yaml
overlays/istio/helm-repositories/: istio.yml
overlays/system/istio/: kustomization.yaml
overlays/system/istio/helm-releases/: gateway.yml
overlays/system/istio/helm-repositories/: istio.yml
overlays/system/kiali/: kiali-helm-release.yaml  kiali-operator-chart.yaml  kiali.yaml  kustomization.yaml
overlays/system/kiali/ingress/: certificate.yaml  istio.yaml
src/fluxified/: bootstrap.py  reconcile.py
src/fluxified/k8s/: with_context.py
