[project]
name = "fluxified"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "mbround18", email = "michael.bruno1337@gmail.com"},
]
dependencies = [
    "kubernetes>=31.0.0",
    "black>=24.8.0",
    "PyGithub>=2.4.0",
    "pyyaml>=6.0.2",
    "requests>=2.32.3",
]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
